Cockroach: basic test runner